--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,30 @@
+:root{
+  --text-color:#124a63;
+  --text-secondary:#b3c5cd;
+  --primary-color:#21b6b7;
+
+  --background-color:#f9f9f9;
+  --background-color-dark:#eef3f6;
+  --background-color-light:#white;
+
+  --font-family:"Poppins", sans-serif;
+  --box-shadow:0px 2px 8px rgba(0,0,0,0.05);
+}
+[data-theme="dark"]{
+  --text-color:#f0f0f0;
+  --text-secondary:#b3c5cd;
+  --primary-color:#21b6b7;
+
+  --background-color:#252329;
+  --background-color-dark:#3c393f;
+  --background-color-light:#120f13;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: var(--font-family);
+  background-color: var(--background-color);
+  color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
